src/app/globals.css
/* ... */
@media screen and (min-width: 768px) {
  .character-model {
    height: 80vh;
  }
  .landing-intro h2 {
    font-size: 25px;
  }
  .landing-intro h1 {
    font-size: 56px;
    line-height: 1.1;
  }
  .landing-info h3 {
    font-size: 25px;
  }
  .landing-info h2 {
    font-size: 45px;
    line-height: 50px;
    height: 50px;
  }
  h2.landing-info-h2 {
    font-size: 55px;
    line-height: 60px;
    height: 60px;
  }
}
@media screen and (min-width: 1025px) {
  .character-model {
    height: 100vh;
    bottom: 0;
    z-index: 11;
    position: fixed;
  }
  .character-model::after,
  .character-model::before {
    display: none;
  }
  .landing-intro {
    position: absolute;
    top: 50%;
    left: 0;
    right: auto;
    transform: translate(0%, -50%);
    width: auto;
  }
  .landing-intro h1 {
    font-size: 68px;
    line-height: 1.1;
  }

  .landing-info {
    position: absolute;
    bottom: auto;
    top: 51%;
    z-index: inherit;
    text-align: left;
    transform: translate(0%, -50%);
    right: 0;
    left: auto;
    width: auto;
    margin-top: 0;
  }
  .landing-info h2 {
    font-size: 50px;
    line-height: 55px;
    height: 55px;
  }
  h2.landing-info-h2 {
    font-size: 60px;
    line-height: 65px;
    height: 65px;
  }
}
@media screen and (min-width: 1200px) {
  .landing-intro {
    top: 50%;
    left: 0;
    right: auto;
    transform: translate(0%, -50%);
  }
  .landing-intro h1 {
    font-size: 78px;
    line-height: 1.1;
  }

  .landing-info {
    bottom: auto;
    top: 51%;
    z-index: inherit;
    text-align: left;
    transform: translate(0%, -50%);
    right: 0;
    left: auto;
  }
  .landing-info h2 {
    font-size: 58px;
    line-height: 65px;
    height: 65px;
  }
  h2.landing-info-h2 {
    font-size: 68px;
    line-height: 75px;
    height: 75px;
  }
}
@media screen and (min-width: 1600px) {
  .landing-intro h2 {
    font-size: 35px;
  }
  .landing-intro h1 {
    font-size: 88px;
    line-height: 1.1;
  }
  .landing-info h3 {
    font-size: 35px;
  }
  .landing-info h2 {
    font-size: 65px;
    line-height: 72px;
    height: 72px;
  }
  h2.landing-info-h2 {
    font-size: 75px;
    line-height: 82px;
    height: 82px;
  }
}

/* =========================================================
   PRELOADER SCREEN SYSTEM (CUSTOM)
========================================================= */

.loading-screen {
  position: fixed;
  width: 100vw;
  height: var(--vh);
  background-color: var(--surface-2);
  z-index: 999999999;
  display: flex;
  place-items: center;
  justify-content: center;
  top: 0;
  left: 0;
}
.loading-button {
  padding: 20px 50px;
  border-radius: 100px;
  background-color: #000;
  overflow: hidden;
  font-size: 18px;
  font-weight: 500;
  position: relative;
  z-index: 9;
  color: #fff;
  border: 1px solid var(--border);
  width: var(--Lsize);
  min-width: var(--Lsize);
  display: flex;
  justify-content: center;
  align-items: center;
}
.loading-button::before {
  content: "";
  background-color: #ffffff;
  top: var(--mouse-y);
  left: var(--mouse-x);
  border-radius: 50%;
  width: 60px;
  height: 60px;
  opacity: 0;
  position: absolute;
  z-index: 99;
  filter: blur(60px);
  transform: translate(-50%, -50%);
  pointer-events: none;
}
.loading-button:hover::before {
  opacity: 1;
}
.loading-clicked .loading-button::before {
  opacity: 0;
}

.loading-wrap {
  --Lsize: 260px;
  padding: 6px;
  position: relative;
  min-width: var(--Lsize);
  min-height: 0px;
  border-radius: 100px;
  background-color: #000;
  overflow: hidden;
  transition: 0.8s ease-in-out;
  transition-delay: 0.2s;
  box-shadow: 0px 15px 15px 0px rgba(0, 0, 0, 0.2);
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid var(--border);
}
.loading-clicked {
  transition-delay: 0ms;
  transition-timing-function: cubic-bezier(0.33, 0.11, 1, 0.72);
  transform: scale(1);
  min-width: calc(100vw + 5000px);
  border-radius: 5000px;
  min-height: calc(100vh + 500px);
  box-shadow: none;
}
.loading-clicked .loading-button {
  overflow: visible;
}
.loading-hover {
  background-color: var(--accent);
  width: 250px;
  height: 120px;
  position: absolute;
  top: var(--mouse-y);
  left: var(--mouse-x);
  border-radius: 50%;
  transform: translate(-50%, -50%);
  filter: blur(30px);
  opacity: 0;
  transition: opacity 500ms;
  pointer-events: none;
}

.loading-wrap:hover .loading-hover {
  opacity: 1;
}
.loading-clicked:hover .loading-hover,
.loading-clicked .loading-hover {
  opacity: 0;
}
.loading-content {
  position: relative;
  background-color: #000;
  width: auto;
  overflow: hidden;
  transition: 0.6s;
  text-transform: uppercase;
}
.loading-content-in {
  position: relative;
  width: auto;
  overflow: hidden;
  color: #fff;
  white-space: nowrap;
}
.loading-content2 {
  position: relative;
  letter-spacing: 2px;
  text-transform: uppercase;
  width: var(--Lsize);
  overflow: hidden;
  display: none;
  justify-content: center;
  align-items: center;
  column-gap: 10px;
  text-align: center;
  transition: opacity 0.5s ease, transform 0.5s ease;
  max-width: var(--Lsize);
  color: #fff;
  opacity: 0;
  pointer-events: none;
}
.loading-complete .loading-content2 {
  display: flex;
  opacity: 1;
  pointer-events: auto;
}
.loading-clicked .loading-content2 {
  opacity: 0;
  transition: 0.5s;
}

.loading-content span {
  font-weight: 300;
  margin-left: 6px;
  opacity: 0.7;
}
.loading-box {
  width: 12px;
  height: 20px;
  background-color: white;
  animation: blink 1s linear infinite;
  flex-shrink: 0;
}
.loading-icon {
  transform: scale(0);
  opacity: 0;
  transition: 0.5s;
  transition-delay: 0.5s;
}

.loading-complete .loading-icon {
  transform: scale(1);
  opacity: 1;
}
.loading-clicked .loading-icon {
  transition-delay: 0s;
  transition: 1s;
  transform: translateX(200px);
}
.loading-clicked .loading-content2 {
  overflow: visible;
}
.loading-clicked .loading-content2 span {
  transition: 1s;
  transform: translateY(100px);
  opacity: 0;
}
/* ... */

